--- a/css/grid.css
+++ b/css/grid.css
@@ -21,6 +21,9 @@ body, p, h1, h2, h3, h4, h5 {
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    border-style: solid;
+    border-color: grey;
+    border-width: 3px;
  }
  
  .col-span-1	{grid-column: span 1 / span 1;}
