Styled Rooms Page
Styled the rooms page and also changed the css grid so everything will fit better.

--- a/css/main.css
+++ b/css/main.css
@@ -455,31 +455,410 @@ Couples Resort Responsive Build
  }
  
 
+
 /* Chateaus */
 
 #chateaus {
    padding-left: 0px;
    padding-right: 30px;
+   margin-bottom: 240px;
 }
 
 #chateaus div img {
    height: 176px;
    width: 324px;
    transform:scaleX(-1);
+   margin: 0px;
+   opacity: 80%;
 }
 
 
 #chat_box {
    background: rgb(255, 255, 255);
    width: 314px;
-   height: 255px;
-   padding: 5px;
+   height: 240px;
+   padding: 5px 0px 0px 5px;
+   justify-items: start;
+   font-size: 14px;
+   position: absolute; 
+   margin-top: 130px;
+   margin-left: 46px;
+   border-style: solid;
+   border-color:#CF6666;
+   border-width: 1px;
+}
+
+#chat_box div {
+   margin-top: 30px;
+   display: flex;
+   align-items: center;
+}
+
+#chat_box h2 {
+   margin-left: 15px;
+   margin-top: 10px;
+}
+
+#chat_box p {
+   margin-left: 15px;
+   margin-top: 5px;
+}
+
+#chat_book {
+   margin: 0px;
+   padding: 8px 16px;
+   background-color: #9a2018;
+}
+
+#chat_box a {
+   font-size: 16px;
+   text-decoration: none;
+   color: #9a2018;
+   margin-left: 15px;
+}
+
+#chat_book a {
+   text-decoration: none;
+   color: white;
+   margin-left: 0px;
+}
+
+/* Villas */
+
+#villas {
+   padding-left: 30px;
+   padding-right: 0px;
+   justify-items: end;
+   margin-bottom: 240px;
+}
+
+#villas div img {
+   height: 176px;
+   width: 324px;
+   transform:scaleX(-1);
+   margin: 0px;
+   opacity: 80%;
+}
+
+#vill_box {
+   background: rgb(255, 255, 255);
+   width: 314px;
+   height: 240px;
+   padding: 5px 0px 0px 5px;
+   justify-items: start;
+   font-size: 14px;
+   position: absolute; 
+   margin-top: 130px;
+   margin-right: 46px;
+   border-style: solid;
+   border-color:#CF6666;
+   border-width: 1px;
+}
+
+
+#vill_box div {
+   margin-top: 52px;
+   display: flex;
+   align-items: center;
+}
+
+#vill_box h2 {
+   margin-left: 15px;
+   margin-top: 10px;
+}
+
+#vill_box p {
+   margin-left: 15px;
+   margin-top: 5px;
+}
+
+#vill_book {
+   margin: 0px;
+   padding: 8px 16px;
+   background-color: #9a2018;
+   height: 22.336px;
+}
+
+#vill_box a {
+   font-size: 16px;
+   text-decoration: none;
+   color: #9a2018;
+   margin-left: 15px;
+}
+
+#vill_book a {
+   text-decoration: none;
+   color: white;
+   margin-left: 0px;
+}
+
+/* Masters */
+
+#masters {
+   padding-left: 0px;
+   padding-right: 30px;
+   margin-bottom: 240px;
+}
+
+#masters div img {
+   height: 176px;
+   width: 324px;
+   margin: 0px;
+   opacity: 80%;
+}
+
+
+#mast_box {
+   background: rgb(255, 255, 255);
+   width: 314px;
+   height: 240px;
+   padding: 5px 0px 0px 5px;
    justify-items: start;
    font-size: 14px;
    position: absolute; 
    margin-top: 130px;
    margin-left: 51px;
    border-style: solid;
-   border-color: red;
+   border-color:#CF6666;
+   border-width: 1px;
 }
 
+#mast_box div {
+   margin-top: 15px;
+   display: flex;
+   align-items: center;
+}
+
+#mast_box h2 {
+   margin-left: 15px;
+   margin-top: 10px;
+}
+
+#mast_box p {
+   margin-left: 15px;
+   margin-top: 5px;
+}
+
+#mast_book {
+   margin: 0px;
+   padding: 8px 16px;
+   background-color: #9a2018;
+}
+
+#mast_box a {
+   font-size: 16px;
+   text-decoration: none;
+   color: #9a2018;
+   margin-left: 15px;
+}
+
+#mast_book a {
+   text-decoration: none;
+   color: white;
+   margin-left: 0px;
+}
+
+/* Chalet */
+
+#chalet {
+   padding-left: 30px;
+   padding-right: 0px;
+   justify-items: end;
+   margin-bottom: 240px;
+}
+
+#chalet div img {
+   height: 176px;
+   width: 324px;
+   transform:scaleX(-1);
+   margin: 0px;
+   opacity: 80%;
+}
+
+#chal_box {
+   background: rgb(255, 255, 255);
+   width: 314px;
+   height: 240px;
+   padding: 5px 0px 0px 5px;
+   justify-items: start;
+   font-size: 14px;
+   position: absolute; 
+   margin-top: 130px;
+   margin-right: 46px;
+   border-style: solid;
+   border-color:#CF6666;
+   border-width: 1px;
+}
+
+
+#chal_box div {
+   margin-top: 88px;
+   display: flex;
+   align-items: center;
+}
+
+#chal_box h2 {
+   margin-left: 15px;
+   margin-top: 10px;
+}
+
+#chal_box p {
+   margin-left: 15px;
+   margin-top: 5px;
+}
+
+#chal_book {
+   margin: 0px;
+   padding: 8px 16px;
+   background-color: #9a2018;
+   height: 22.336px;
+}
+
+#chal_box a {
+   font-size: 16px;
+   text-decoration: none;
+   color: #9a2018;
+   margin-left: 15px;
+}
+
+#chal_book a {
+   text-decoration: none;
+   color: white;
+   margin-left: 0px;
+}
+
+/* Exotic */
+
+#exotic {
+   padding-left: 0px;
+   padding-right: 30px;
+   margin-bottom: 240px;
+}
+
+#exotic div img {
+   height: 176px;
+   width: 324px;
+   margin: 0px;
+   opacity: 80%;
+}
+
+
+#exot_box {
+   background: rgb(255, 255, 255);
+   width: 314px;
+   height: 240px;
+   padding: 5px 0px 0px 5px;
+   justify-items: start;
+   font-size: 14px;
+   position: absolute; 
+   margin-top: 130px;
+   margin-left: 46px;
+   border-style: solid;
+   border-color:#CF6666;
+   border-width: 1px;
+}
+
+#exot_box div {
+   margin-top: 88px;
+   display: flex;
+   align-items: center;
+}
+
+#exot_box h2 {
+   margin-left: 15px;
+   margin-top: 10px;
+}
+
+#exot_box p {
+   margin-left: 15px;
+   margin-top: 5px;
+}
+
+#exot_book {
+   margin: 0px;
+   padding: 8px 16px;
+   background-color: #9a2018;
+   height: 22.336px;
+}
+
+#exot_box a {
+   font-size: 16px;
+   text-decoration: none;
+   color: #9a2018;
+   margin-left: 15px;
+}
+
+#exot_book a {
+   text-decoration: none;
+   color: white;
+   margin-left: 0px;
+}
+
+/* Juniors */
+
+#juniors {
+   padding-left: 30px;
+   padding-right: 0px;
+   justify-items: end;
+   margin-bottom: 240px;
+}
+
+#juniors div img {
+   height: 176px;
+   width: 324px;
+   transform:scaleX(-1);
+   margin: 0px;
+   opacity: 80%;
+}
+
+#juni_box {
+   background: rgb(255, 255, 255);
+   width: 314px;
+   height: 240px;
+   padding: 5px 0px 0px 5px;
+   justify-items: start;
+   font-size: 14px;
+   position: absolute; 
+   margin-top: 130px;
+   margin-right: 46px;
+   border-style: solid;
+   border-color:#CF6666;
+   border-width: 1px;
+}
+
+
+#juni_box div {
+   margin-top: 88px;
+   display: flex;
+   align-items: center;
+}
+
+#juni_box h2 {
+   margin-left: 15px;
+   margin-top: 10px;
+}
+
+#juni_box p {
+   margin-left: 15px;
+   margin-top: 5px;
+}
+
+#juni_book {
+   margin: 0px;
+   padding: 8px 16px;
+   background-color: #9a2018;
+   height: 22.336px;
+}
+
+#juni_box a {
+   font-size: 16px;
+   text-decoration: none;
+   color: #9a2018;
+   margin-left: 15px;
+}
+
+#juni_book a {
+   text-decoration: none;
+   color: white;
+   margin-left: 0px;
+}
