--- a/css/main.css
+++ b/css/main.css
@@ -1403,6 +1403,7 @@ Couples Resort Responsive Build
       border-top: 15px solid transparent;
       border-left: 30px solid #838383;
       border-bottom: 15px solid transparent;
+      cursor: pointer;
  }
  
  #video_heading_box {
